添加了actvity切换的动画，完善了沉浸式导航栏

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "com.vehicle.suixing.suixing"
-        minSdkVersion 14
+        minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -20,10 +20,15 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'de.hdodenhof:circleimageview:1.3.0'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.android.support:recyclerview-v7:23.2.1'
+    compile files('src/libs/Bmob_Push_V0.6beta_20150408.jar')
+    compile files('src/libs/BmobSDK_V3.4.5_1111.jar')
+    compile files('src/libs/okhttp-2.4.0.jar')
+    compile files('src/libs/okio-1.4.0.jar')
+    compile project(':zxinglib')
 }
