--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,8 @@ dependencies {
     compile files('src/libs/okio-1.4.0.jar')
     compile 'com.google.code.gson:gson:2.3'
     compile 'com.android.support:cardview-v7:23.2.1'
+    //缓存图片用的库
+    compile 'com.squareup.picasso:picasso:2.5.2'
     compile project(':zxinglib')
+    compile files('libs/volley.jar')
 }
