--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         </activity>
         <activity android:name=".ui.activity.AddVehicleActivity"/>
         <activity android:name=".ui.activity.AddSuccessActivity"/>
+        <activity android:name=".ui.activity.TestActivity"/>
     </application>
 
 </manifest>
