--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,14 +35,20 @@ dependencies {
     //控件
     compile 'com.android.support:cardview-v7:23.2.1'
     compile 'com.android.support:recyclerview-v7:23.2.1'
-    compile 'com.rengwuxian.materialedittext:library:2.1.4'//material design 的 edittext
+    compile 'com.rengwuxian.materialedittext:library:2.1.4'
+    //material design 的 edittext
     compile 'de.hdodenhof:circleimageview:1.3.0'
-
     //缓存图片用的库
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.3'
     compile 'com.squareup.picasso:picasso:2.5.2'
     //扫描二维码用的库
     compile project(':zxinglib')
     //网络请求
     compile files('libs/volley.jar')
-
+    //rxjava
+    compile 'io.reactivex:rxandroid:1.1.0'
+    compile 'io.reactivex:rxjava:1.1.0'
+    compile 'com.squareup.retrofit:retrofit:1.9.0'
+    //违章查询sdk
+    compile files('libs/weizhang_sdk.jar')
 }
