--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,17 +15,20 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
+        android:name=".app.SuiXingApplication"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/ThemeActivity">
-        <activity android:name=".ui.activity.MainActivity"
-            android:screenOrientation="portrait">
+        <activity android:name=".ui.activity.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.activity.RegisterActivity"/>
+        <activity android:name=".ui.activity.LoginActivity"/>
+        <activity android:name=".ui.activity.RepasswordActivity"/>
+        <activity android:name=".ui.activity.MainActivity"/>
         <activity android:name=".ui.activity.AddVehicleActivity"/>
         <activity android:name=".ui.activity.AddSuccessActivity"/>
         <activity android:name=".ui.activity.TestActivity"/>
