--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,8 @@ dependencies {
     compile files('src/libs/okio-1.4.0.jar')
     //google退出解析json用的 官方的库
     compile 'com.google.code.gson:gson:2.4'
+    //rxandroid
+    compile 'io.reactivex:rxandroid:1.1.0'
     //控件
     compile 'com.android.support:cardview-v7:23.2.1'
     compile 'com.android.support:recyclerview-v7:23.2.1'
