--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,8 @@ dependencies {
     //控件
     compile 'com.android.support:cardview-v7:23.2.1'
     compile 'com.android.support:recyclerview-v7:23.2.1'
-    compile 'com.rengwuxian.materialedittext:library:2.1.4'
+    compile 'com.android.support:design:22.2.0'
+    compile 'me.drakeet.materialdialog:library:1.3.1'
     //material design 的 edittext
     compile 'de.hdodenhof:circleimageview:1.3.0'
     //缓存图片用的库
