--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.vehicle.suixing.suixing">
 
+    <uses-permission android:name="android.permission.MANAGE_DOCUMENTS"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -15,7 +16,7 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
-        android:name=".app.SuiXingApplication"
+        android:name=".app.SuixingApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -35,6 +36,8 @@
         <activity android:name=".ui.activity.AddSuccessActivity" />
         <activity android:name=".ui.activity.PeccanydActivity" />
         <activity android:name=".ui.activity.QueryOthersActivity" />
+        <activity android:name=".ui.activity.EditMottoActivity"/>
+        <activity android:name=".ui.activity.EditNameActivity"/>
         <!--<service android:name="com.cheshouye.api.client.WeizhangIntentService"/>-->
         <service
             android:name="cn.bmob.push.lib.service.PushService"
