--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,5 @@ dependencies {
     compile files('libs/baidumapapi_search_v3_7_0.jar')
     compile files('libs/baidumapapi_util_v3_7_0.jar')
     compile files('libs/locSDK_6.13.jar')
+    compile files('libs/httpmime-4.1.2.jar')
 }
