--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,6 @@
 
     <uses-permission android:name="android.permission.MANAGE_DOCUMENTS" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CAMERA" />
@@ -12,7 +11,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
     <uses-permission android:name="android.permission.READ_LOGS" />
-    <uses-permission android:name="android.permission.WRITE_SETTINGS"/>
+    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
     <uses-permission android:name="android.permission.RECEIVE_USER_PRESENT" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
@@ -22,6 +21,20 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <!-- SD卡读取权限，用户写入离线定位数据-->
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+
+    <uses-permission android:name="android.permission.BAIDU_LOCATION_SERVICE" />
+    <uses-permission android:name="android.permission.ACCES_MOCK_LOCATION" />
+    <uses-permission android:name="com.android.launcher.permission.READ_SETTINGS" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_GPS" />
+    <!-- SDK1.5需要android.permission.GET_TASKS权限判断本程序是否为当前运行的应用? -->
+    <uses-permission android:name="android.permission.GET_TASKS" />
+    <uses-permission android:name="android.permission.BROADCAST_STICKY" />
+    <!-- 来电消音 -->
+    <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <application
         android:name=".app.SuixingApp"
@@ -40,20 +53,39 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.activity.MainActivity" />
-        <activity android:name=".ui.activity.RegisterActivity" />
-        <activity android:name=".ui.activity.LoginActivity" />
-        <activity android:name=".ui.activity.RepasswordActivity" />
-        <activity android:name=".ui.activity.AddVehicleActivity" />
-        <activity android:name=".ui.activity.AddSuccessActivity" />
-        <activity android:name=".ui.activity.PeccanydActivity" />
-        <activity android:name=".ui.activity.QueryOthersActivityActivity" />
-        <activity android:name=".ui.activity.EditMottoActivity" />
-        <activity android:name=".ui.activity.EditNameActivity" />
-        <activity android:name=".ui.activity.DateActivity" />
-        <activity android:name=".ui.activity.DateSuccessActivity" />
-        <activity android:name=".ui.activity.MyDateActivity"/>
-       <service
+        <activity android:name=".ui.activity.MainActivity"
+            android:launchMode="singleTask"/>
+        <activity android:name=".ui.activity.RegisterActivity"
+            android:launchMode="singleTask"/>
+        <activity android:name=".ui.activity.LoginActivity"
+            android:launchMode="singleTask"/>
+        <activity android:name=".ui.activity.RepasswordActivity"
+            android:launchMode="singleTask"/>
+        <activity android:name=".ui.activity.AddVehicleActivity"
+            android:launchMode="singleTask"/>
+        <activity android:name=".ui.activity.AddSuccessActivity"
+            android:launchMode="singleTask"/>
+        <activity android:name=".ui.activity.PeccanydActivity"
+            android:launchMode="singleTask"/>
+        <activity android:name=".ui.activity.QueryOthersActivityActivity"
+            android:launchMode="singleTask"/>
+        <activity android:name=".ui.activity.EditMottoActivity"
+            android:launchMode="singleTask"/>
+        <activity android:name=".ui.activity.EditNameActivity"
+            android:launchMode="singleTask"/>
+        <activity android:name=".ui.activity.DateActivity"
+            android:launchMode="singleTask"/>
+        <activity android:name=".ui.activity.DateSuccessActivity"
+            android:launchMode="singleTask"/>
+        <activity android:name=".ui.activity.MyDateActivity"
+            android:launchMode="singleTask"/>
+        <!-- 导航activity-->
+        <activity
+            android:name=".ui.activity.NavigationActivity"
+            android:launchMode="singleTask"
+            android:configChanges="orientation|screenSize|keyboard|keyboardHidden">
+        </activity>
+        <service
             android:name="cn.bmob.push.lib.service.PushService"
             android:exported="true"
             android:label="PushService"
@@ -65,7 +97,7 @@
         <service
             android:name="com.baidu.location.f"
             android:enabled="true"
-            android:process=":remote"/>
+            android:process=":remote" />
         <service
             android:name=".service.MusicPlayService"
             android:process=":music_player" />
